--- a/packages/editor/src/components/section-editor.component.html
+++ b/packages/editor/src/components/section-editor.component.html
@@ -10,46 +10,46 @@
         </div>
     </div>
     <div class="tab-wrap">
-        <input type="radio" name="tabs" id="tab1" checked>
+        <input class="fql-field-input" type="radio" name="tabs" id="tab1" checked>
         <div class="tab-label-content" id="tab1-content">
             <label class="fql-tab-label" for="tab1">Properties</label>
             <div class="tab-content">
-                <label class="field-label" for="sectionId">Section Id</label>
-                <input type="text" id="sectionId" [(ngModel)]="updatedSection.sectionId" name="sectionId" disabled>
+                <label class="fql-field-label" for="sectionId">Section Id</label>
+                <input class="fql-field-input" type="text" id="sectionId" [(ngModel)]="updatedSection.sectionId" name="sectionId" disabled>
                 <div class="fql-properties-div">
-                    <label class="field-label" for="headerTemplate-gridTemplateColumns">Header Template -
+                    <label class="fql-field-label" for="headerTemplate-gridTemplateColumns">Header Template -
                         gridTemplateColumns</label>
-                    <input type="text" id="headerTemplate-gridTemplateColumns" [(ngModel)]="updatedSection.template.header.gridTemplateColumns"
+                    <input class="fql-field-input" type="text" id="headerTemplate-gridTemplateColumns" [(ngModel)]="updatedSection.template.header.gridTemplateColumns"
                         name="headerTemplate-gridTemplateColumns">
 
-                    <label class="field-label" for="headerTemplate-gridTemplateRows">Header Template - gridTemplateRows</label>
-                    <input type="text" id="headerTemplate-gridTemplateRows" [(ngModel)]="updatedSection.template.header.gridTemplateRows"
+                    <label class="fql-field-label" for="headerTemplate-gridTemplateRows">Header Template - gridTemplateRows</label>
+                    <input class="fql-field-input" type="text" id="headerTemplate-gridTemplateRows" [(ngModel)]="updatedSection.template.header.gridTemplateRows"
                         name="headerTemplate-gridTemplateRows">
 
-                    <label class="field-label" for="headerTemplate-gridTemplateAreas">Header Template -
+                    <label class="fql-field-label" for="headerTemplate-gridTemplateAreas">Header Template -
                         gridTemplateAreas</label>
-                    <input type="text" id="headerTemplate-gridTemplateAreas" [(ngModel)]="updatedSection.template.header.gridTemplateAreas"
+                    <input class="fql-field-input" type="text" id="headerTemplate-gridTemplateAreas" [(ngModel)]="updatedSection.template.header.gridTemplateAreas"
                         name="headerTemplate-gridTemplateAreas">
                 </div>
                 <div class="fql-properties-div">
-                    <label class="field-label" for="bodyTemplate-gridTemplateColumns">Body Template -
+                    <label class="fql-field-label" for="bodyTemplate-gridTemplateColumns">Body Template -
                         gridTemplateColumns</label>
-                    <input type="text" id="bodyTemplate-gridTemplateColumns" [(ngModel)]="updatedSection.template.body.gridTemplateColumns"
+                    <input class="fql-field-input" type="text" id="bodyTemplate-gridTemplateColumns" [(ngModel)]="updatedSection.template.body.gridTemplateColumns"
                         name="bodyTemplate-gridTemplateColumns">
 
-                    <label class="field-label" for="bodyTemplate-gridTemplateRows">Body Template - gridTemplateRows</label>
-                    <input type="text" id="bodyTemplate-gridTemplateRows" [(ngModel)]="updatedSection.template.body.gridTemplateRows"
+                    <label class="fql-field-label" for="bodyTemplate-gridTemplateRows">Body Template - gridTemplateRows</label>
+                    <input class="fql-field-input" type="text" id="bodyTemplate-gridTemplateRows" [(ngModel)]="updatedSection.template.body.gridTemplateRows"
                         name="bodyTemplate-gridTemplateRows">
 
-                    <label class="field-label" for="bodyTemplate-gridTemplateAreas">Body Template - gridTemplateAreas</label>
-                    <input type="text" id="bodyTemplate-gridTemplateAreas" [(ngModel)]="updatedSection.template.body.gridTemplateAreas"
+                    <label class="fql-field-label" for="bodyTemplate-gridTemplateAreas">Body Template - gridTemplateAreas</label>
+                    <input class="fql-field-input" type="text" id="bodyTemplate-gridTemplateAreas" [(ngModel)]="updatedSection.template.body.gridTemplateAreas"
                         name="bodyTemplate-gridTemplateAreas">
                 </div>
 
             </div>
         </div>
 
-        <input type="radio" name="tabs" id="tab2">
+        <input class="fql-field-input" type="radio" name="tabs" id="tab2">
         <div class="tab-label-content" id="tab2-content">
             <label class="fql-tab-label" for="tab2">Rules</label>
             <div class="tab-content">
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <input type="radio" name="tabs" id="tab3">
+        <input class="fql-field-input" type="radio" name="tabs" id="tab3">
         <div class="tab-label-content" id="tab3-content">
             <label class="fql-tab-label" for="tab3">Advanced</label>
             <div class="tab-content">
