--- a/packages/editor/src/variables.scss
+++ b/packages/editor/src/variables.scss
@@ -1,22 +1,24 @@
 $font-family: Segoe UI;
 $font-size-labels: 14px;
 
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 8px 10px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  font-size: 14px;
+
+.fql-field-textarea, .fql-field-select, .fql-field-input {
+    width: 100%;
+    padding: 8px 10px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 14px;
 }
 
-input[type=text]:focus {
-    border: 1px solid #555;
+.fql-field-textarea {
+    min-width: 100%;
+    max-width: 100%;
 }
 
-.field-label {
+.fql-field-label {
     font-size: 14px;
     font-weight: bold;
 }
@@ -81,7 +83,7 @@ input[type=text]:focus {
     fill: rbga(0,0,0,0.9);
 }
 
-.not-selectable {
+.fql-not-selectable {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
