--- a/packages/editor/src/components/page-editor.component.html
+++ b/packages/editor/src/components/page-editor.component.html
@@ -10,31 +10,31 @@
         </div>
     </div>
     <div class="tab-wrap">
-        <input type="radio" name="tabs" id="tab1" checked>
+        <input class="fql-field-input" type="radio" name="tabs" id="tab1" checked>
         <div class="tab-label-content" id="tab1-content">
             <label class="fql-tab-label" for="tab1">Properties</label>
             <div class="tab-content">
-                <label class="field-label" for="pageId">Page Id</label>
-                <input type="text" id="pageId" [(ngModel)]="updatedPage.pageId" name="pageId" disabled>
+                <label class="fql-field-label" for="pageId">Page Id</label>
+                <input class="fql-field-input" type="text" id="pageId" [(ngModel)]="updatedPage.pageId" name="pageId" disabled>
                 <div class="fql-properties-div">
-                    <label class="field-label" for="bodyTemplate-gridTemplateColumns">Body Template -
+                    <label class="fql-field-label" for="bodyTemplate-gridTemplateColumns">Body Template -
                         gridTemplateColumns</label>
-                    <input type="text" id="bodyTemplate-gridTemplateColumns" [(ngModel)]="updatedPage.template.body.gridTemplateColumns"
+                    <input class="fql-field-input" type="text" id="bodyTemplate-gridTemplateColumns" [(ngModel)]="updatedPage.template.body.gridTemplateColumns"
                         name="bodyTemplate-gridTemplateColumns">
 
-                    <label class="field-label" for="bodyTemplate-gridTemplateRows">Body Template - gridTemplateRows</label>
-                    <input type="text" id="bodyTemplate-gridTemplateRows" [(ngModel)]="updatedPage.template.body.gridTemplateRows"
+                    <label class="fql-field-label" for="bodyTemplate-gridTemplateRows">Body Template - gridTemplateRows</label>
+                    <input class="fql-field-input" type="text" id="bodyTemplate-gridTemplateRows" [(ngModel)]="updatedPage.template.body.gridTemplateRows"
                         name="bodyTemplate-gridTemplateRows">
 
-                    <label class="field-label" for="bodyTemplate-gridTemplateAreas">Body Template - gridTemplateAreas</label>
-                    <input type="text" id="bodyTemplate-gridTemplateAreas" [(ngModel)]="updatedPage.template.body.gridTemplateAreas"
+                    <label class="fql-field-label" for="bodyTemplate-gridTemplateAreas">Body Template - gridTemplateAreas</label>
+                    <input class="fql-field-input" type="text" id="bodyTemplate-gridTemplateAreas" [(ngModel)]="updatedPage.template.body.gridTemplateAreas"
                         name="bodyTemplate-gridTemplateAreas">
                 </div>
 
             </div>
         </div>
 
-        <input type="radio" name="tabs" id="tab2">
+        <input class="fql-field-input" type="radio" name="tabs" id="tab2">
         <div class="tab-label-content" id="tab2-content">
             <label class="fql-tab-label" for="tab2">Rules</label>
             <div class="tab-content">
@@ -42,7 +42,7 @@
             </div>
         </div>
 
-        <input type="radio" name="tabs" id="tab3">
+        <input class="fql-field-input" type="radio" name="tabs" id="tab3">
         <div class="tab-label-content" id="tab3-content">
             <label class="fql-tab-label" for="tab3">Advanced</label>
             <div class="tab-content">
