--- a/packages/editor/src/components/page-editor.component.html
+++ b/packages/editor/src/components/page-editor.component.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="tab-wrap">
-        <input class="fql-field-input" type="radio" name="tabs" id="tab1" checked>
+        <input class="fql-field-input-tab" type="radio" name="tabs" id="tab1" checked>
         <div class="tab-label-content" id="tab1-content">
             <label class="fql-tab-label" for="tab1">Properties</label>
             <div class="tab-content">
@@ -34,7 +34,7 @@
             </div>
         </div>
 
-        <input class="fql-field-input" type="radio" name="tabs" id="tab2">
+        <input class="fql-field-input-tab" type="radio" name="tabs" id="tab2">
         <div class="tab-label-content" id="tab2-content">
             <label class="fql-tab-label" for="tab2">Rules</label>
             <div class="tab-content">
@@ -42,7 +42,7 @@
             </div>
         </div>
 
-        <input class="fql-field-input" type="radio" name="tabs" id="tab3">
+        <input class="fql-field-input-tab" type="radio" name="tabs" id="tab3">
         <div class="tab-label-content" id="tab3-content">
             <label class="fql-tab-label" for="tab3">Advanced</label>
             <div class="tab-content">
