--- a/packages/editor/src/variables.scss
+++ b/packages/editor/src/variables.scss
@@ -13,6 +13,11 @@ $font-size-labels: 14px;
     font-size: 14px;
 }
 
+.fql-field-input-tab {
+    width:0px;
+}
+
+
 .fql-field-textarea {
     min-width: 100%;
     max-width: 100%;
