--- a/packages/editor/src/components/grid-style-editor.component.html
+++ b/packages/editor/src/components/grid-style-editor.component.html
@@ -21,6 +21,6 @@
             name="headerTemplate-gridTemplateAreas">
     </div>
     <div class="fql-grid-style-style">
-        <json-field-input [label]="'Style'" [(json)]="gridStyle.style"></json-field-input>
+        <formql-json-field-input [label]="'Style'" [(json)]="gridStyle.style"></formql-json-field-input>
     </div>
 </div>
