--- a/packages/editor/src/components/section-editor.component.html
+++ b/packages/editor/src/components/section-editor.component.html
@@ -11,22 +11,22 @@
     </div>
     <div class="tab-wrap">
         <input class="fql-field-input-tab" type="radio" name="tabs" id="tab1" checked>
-        <div class="tab-label-content" id="tab1-content">
+        <div class="fql-tab-label-content" id="tab1-content">
             <label class="fql-tab-label" for="tab1">Properties</label>
             <div class="tab-content">
                 <label class="fql-field-label" for="sectionId">Section Id</label>
                 <input class="fql-field-input" type="text" id="sectionId" [(ngModel)]="updatedSection.sectionId" name="sectionId" disabled>
                 <div class="fql-properties-div">
-                    <grid-style-editor [header]="'HEADER TEMPLATE'" [gridStyle]="updatedSection.template.header"></grid-style-editor>
+                    <formql-grid-style-editor [header]="'HEADER TEMPLATE'" [gridStyle]="updatedSection.template.header"></formql-grid-style-editor>
                 </div>
                 <div class="fql-properties-div">
-                    <grid-style-editor [header]="'BODY TEMPLATE'" [gridStyle]="updatedSection.template.body"></grid-style-editor>
+                    <formql-grid-style-editor [header]="'BODY TEMPLATE'" [gridStyle]="updatedSection.template.body"></formql-grid-style-editor>
                 </div>
             </div>
         </div>
 
         <input class="fql-field-input-tab" type="radio" name="tabs" id="tab2">
-        <div class="tab-label-content" id="tab2-content">
+        <div class="fql-tab-label-content" id="tab2-content">
             <label class="fql-tab-label" for="tab2">Rules</label>
             <div class="tab-content">
 
@@ -34,7 +34,7 @@
         </div>
 
         <input class="fql-field-input-tab" type="radio" name="tabs" id="tab3">
-        <div class="tab-label-content" id="tab3-content">
+        <div class="fql-tab-label-content" id="tab3-content">
             <label class="fql-tab-label" for="tab3">Advanced</label>
             <div class="tab-content">
                 Comming soon... :-)
