--- a/packages/editor/src/components/form-editor.component.html
+++ b/packages/editor/src/components/form-editor.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="tab-wrap">
         <input class="fql-field-input-tab" type="radio" name="tabs" id="tab1" checked>
-        <div class="tab-label-content" id="tab1-content">
+        <div class="fql-tab-label-content" id="tab1-content">
             <label class="fql-tab-label" for="tab1">Properties</label>
             <div class="tab-content">
                 <label class="fql-field-label" for="formName">Form Name</label>
@@ -24,7 +24,7 @@
         </div>
 
         <input class="fql-field-input-tab" type="radio" name="tabs" id="tab2">
-        <div class="tab-label-content" id="tab2-content">
+        <div class="fql-tab-label-content" id="tab2-content">
             <label class="fql-tab-label" for="tab2">Data Sources</label>
             <div class="tab-content">
                 <label class="fql-field-label" for="type">Type</label>
@@ -42,7 +42,7 @@
         </div>
 
         <input class="fql-field-input-tab" type="radio" name="tabs" id="tab3">
-        <div class="tab-label-content" id="tab3-content">
+        <div class="fql-tab-label-content" id="tab3-content">
             <label class="fql-tab-label" for="tab3">Advanced</label>
             <div class="tab-content">
                 Comming soon... :-)
