--- a/packages/editor/src/components/formql-editor.component.html
+++ b/packages/editor/src/components/formql-editor.component.html
@@ -28,7 +28,7 @@
         </div>
     </header>
     <aside class="fql-left-sidenav">
-        <formQLLeftSideBar (leftSideNavBarAction)="leftSideNavBarActionClick($event)" [mode]="mode"></formQLLeftSideBar>
+        <formql-left-side-bar (leftSideNavBarAction)="leftSideNavBarActionClick($event)" [mode]="mode"></formql-left-side-bar>
     </aside>
     <div class="fql-editor-main">
         <nav #rightSidenav class="fql-slide-bar fql-bar-effect">
