--- a/packages/editor/src/components/component-editor.component.scss
+++ b/packages/editor/src/components/component-editor.component.scss
@@ -86,8 +86,8 @@ input[type="radio"][name="tabs"] {
 }
 
 .fql-properties-div {
-    border-top: 1px solid rgba(0,0,0,0.12);
-    padding-top: 5px;
+    border-bottom: 1px solid rgba(0,0,0,0.12);
+    padding-bottom: 10px;
     margin-top: 10px;
 }
 
