--- a/packages/editor/src/components/component-editor.component.html
+++ b/packages/editor/src/components/component-editor.component.html
@@ -21,7 +21,7 @@
                 <input class="fql-field-input" type="text" id="label" [(ngModel)]="updatedComponent.label" name="label">
 
                 <label class="fql-field-label" for="componentName">Component Name</label>
-                <select class="fql-field-select" [(ngModel)]="updatedComponent.componentName" (change)="componentChanged($event.target.value)">
+                <select class="fql-field-select" [(ngModel)]="updatedComponent.componentName" (change)="componentChanged()">
                     <option *ngFor="let option of componentList" [ngValue]="option">{{option}}</option>
                 </select>
 
@@ -67,7 +67,7 @@
                     </select>
                     <div *ngIf="updatedComponent.action && updatedComponent.action.key === FormActionType.Custom">
                         <label class="fql-field-label" for="customKey">Custom Key</label>
-                        <input class="fql-field-input" type="text" id="customKey" [(ngModel)]="updatedComponent.action.customKey" name="customKey">
+                        <input class="fql-field-input" type="text" id="customKey" [(ngModel)]="updatedComponent.action.customkey" name="customKey">
         
                         <formql-json-field-input [label]="'Parameter'" [(json)]="updatedComponent.action.parameters"></formql-json-field-input>
                     </div>
